--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'Mailer Bot'
+name: 'Weather Info Bot'
 
 on: push
 
@@ -8,8 +8,8 @@ jobs:
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
-      - name: 'Get Page'
-        run:  echo "$(curl https://static.nytimes.com/email-content/CNB_sample.html)" >> result.html
+      - name: 'Get Weather'
+        run: bash ./weather.sh
       - name: 'Get Date'
         run: echo "REPORT_DATE=$(TZ=':Asia/Beijing' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
       - name: 'Send mail'
@@ -21,5 +21,5 @@ jobs:
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: Page Result (${{env.REPORT_DATE}})
           html_body: file://result.html
-          to: literature2022@aliyun.com
-          from: GitHub Actions
+          to: it@emails.bjut.edu.cn
+          from: Github Repo of Ezharjan
